2002-03-27  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	specify the type name explicitely.

	* src/nautilus-window.c
	(nautilus_window_constructed): move some of the fast setup
	(nautilus_window_instance_init): to here, so it will be
	done by the time the throbber async activate comes in.

2002-03-26  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-icon-canvas-item.c
	(nautilus_icon_canvas_item_class_init): kill nasty gconf
	re-enterancy hazard moving the auto_enum to
	(nautilus_icon_canvas_item_init): here.
	(nautilus_icon_canvas_item_class_init): add the a11y
	factory & instantiate the factory boilerplate.
	(nautilus_icon_canvas_item_accessibile_create),
	(nautilus_icon_canvas_item_accessible_get_name),
	(nautilus_icon_canvas_item_accessible_class_init),
	(nautilus_icon_canvas_item_accessible_get_type): impl.

2002-03-25  Mark McLoughlin  <mark@skynet.ie>

	* src/file-manager/fm-directory-view.c: (update_scripts_menu): also
	hide the scripts seperator on the background menu.

2002-03-25  Alexander Larsson  <alla@lysator.liu.se>

	* src/nautilus-location-bar.c: (style_set_handler):
	Port to gnome 2.
	(have_broken_filenames), (accumulate_name_utf8),
	(accumulate_name_locale), (try_to_expand_path):
	Fix filename completion, add support for G_BROKEN_FILENAMES

=== nautilus 1.1.11 ===

2002-03-24  Alexander Larsson  <alla@lysator.liu.se>

	* NEWS:
	bump version

	* configure.in:
	Require eel 1.1.9. Bump version to 1.1.11

2002-03-24  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-entry.c: (nautilus_entry_init):
	* libnautilus-private/nautilus-global-preferences.c:
	* libnautilus-private/nautilus-global-preferences.h:
	* src/nautilus-preferences-dialog.c: Remove references to the 
	"Use Emacs-style keyboard shortcuts" preference.

2002-03-24 John Fleck <jfleck@inkstain.net>

	* src/nautilus-shell-ui.xml
	* src/nautilus-window-menus.c
	remove link to release notes in help menu