@@ -1,8 +1,18 @@
 2002-03-27  Michael Meeks  <michael@ximian.com>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c
+	(nautilus_icon_canvas_item_accessible_get_image_description),
+	(nautilus_icon_canvas_item_accessible_get_image_size),
+	(nautilus_icon_canvas_item_accessible_image_interface_init),
+	(nautilus_icon_canvas_item_accessible_get_image_position): impl.
+	(nautilus_icon_canvas_item_accessible_get_image_position): stub.
+	(nautilus_icon_canvas_item_accessible_get_type): upd.
+
+2002-03-27  Michael Meeks  <michael@ximian.com>
+
 	* libnautilus-private/nautilus-icon-canvas-item.c:
 	specify the type name explicitely.
-
+	
 	* src/nautilus-window.c
 	(nautilus_window_constructed): move some of the fast setup
 	(nautilus_window_instance_init): to here, so it will be
